# vllm-metal

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  metal-probe.yml
docs/: configuration.md  stt.md
scripts/: ci.sh  install_platform_hook.py  lib.sh  patch_vllm_platform.py  test-gpu.sh  test.sh  test_ray_cluster.py
tests/: conftest.py  test_attention_sdpa.py  test_compat.py  test_config.py  test_gdn_kernel.py  test_hybrid_model_dims.py  test_model_adapter.py  test_model_lifecycle.py  test_paged_attention.py  test_paged_deterministic.py  test_per_layer_kv_cache.py  test_platform.py  test_prefix_cache.py  test_sampling.py  test_stt.py  test_v1_model_runner_generate.py  test_v1_stt_integration.py
tools/: README.md  bench_gdn_kernel.py  spec_window_bench.py  spec_window_parity.py  test_qwen35_golden.py
vllm_metal/: __init__.py  compat.py  config.py  envs.py  model_runner.py  platform.py  worker.py
vllm_metal/attention/impls/: sdpa.py
vllm_metal/metal/: paged_ops.cpp
vllm_metal/metal/kernels_v2/: gdn_linear_attention.metal  pagedattention.metal
vllm_metal/metal_kernel_backend/: attention_linear.py  attention_sdpa.py  packed_prefill_compat.py  paged_attention.py
vllm_metal/paged_attention_backend/: hybrid.py
vllm_metal/stt/: __init__.py  hf_config.py  loader.py  transcribe.py
vllm_metal/v1/: __init__.py  cache_policy.py  metal_worker.py  model_adapter.py  model_compat.py  model_lifecycle.py  model_runner.py  mps_model_runner.py  worker.py
vllm_metal/v1/attention/: __init__.py
vllm_metal/v1/attention/backends/: __init__.py  mps_attn.py
